frame/support/test/tests/pallet_ui/duplicate_store_attr.stderr
error: Unexpected duplicated attribute
  --> tests/pallet_ui/duplicate_store_attr.rs:12:3
   |
12 |     #[pallet::generate_store(trait Store)]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
